set (MANAGESDL_PROJECT ManageSDL)

if(CMAKE_SYSTEM_NAME STREQUAL "Windows")
set (SOURCE
	manage_sdl.cc
)
else()
set (SOURCE
	manage_sdl_posix.cc
)
endif()

add_executable(${MANAGESDL_PROJECT} ${SOURCE})

if(CMAKE_SYSTEM_NAME STREQUAL "Windows" OR CMAKE_SYSTEM_NAME STREQUAL "Darwin")
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
SET_TARGET_PROPERTIES(${MANAGESDL_PROJECT} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_CURRENT_BINARY_DIR}")
eles()
SET_TARGET_PROPERTIES(${MANAGESDL_PROJECT} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_CURRENT_BINARY_DIR}")
endif()
endif()

# Install rules
install(TARGETS ${MANAGESDL_PROJECT} DESTINATION bin)

